Cleans up Content Grid block template

--- a/templates/block/block--content-grid.html.twig
+++ b/templates/block/block--content-grid.html.twig
@@ -1,10 +1,7 @@
 {#
 /**
- * @file
- * Theme to implement the content grid
- *
- * Created by Joshua Nicholson on 08/09/22
-*
+ * @file Contains the template to display the Content Grid block.
+ */
 #}
 
 {{ attach_library('boulder_base/ucb-content-grid') }}
@@ -31,9 +28,9 @@
 {% else %}
   {% set columnNumbers = "6" %}
 {% endif %}
-{% set imgStyle = "square-img" %}
+{% set imgStyle = 'focal_image_square' %}
 {% if content['#block_content'].field_grid_image_style.value is same as ("1") %}
-  {% set imgStyle = "wide-img" %}
+  {% set imgStyle = 'focal_image_wide' %}
 {% endif %}
 
 {# Block/Title/Icon Styles #}
@@ -75,20 +72,19 @@
           {% if title or item.entity.field_grid_layout_content_text|view %}
             <div class="col">
               <div{{ create_attribute({ class: layoutSelection == 0 ? 'grid-column' : 'grid-card' }) }}>
-                {% if (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "square-img") %}
-                  {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
+                {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
+                  {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
                   {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-                {% elseif (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "wide-img") %}
-                  {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide') %}
-                  {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
+                {% else %}
+                  {% set imgUrl = null %}
                 {% endif %}
                 {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
                 {% set containerTag = link ? 'a' : 'div' %}
                 <div class="grid-text-container">
                   <{{ containerTag }}{{ create_attribute({ class: 'd-flex flex-column-reverse justify-content-end', href: link }) }}>
                     <strong class="h3">{{ title }}</strong>
-                    {% if imgUrl is not null %}
-                      <div class="grid-image-container grid-fill {{ imgStyle }}">
+                    {% if imgUrl %}
+                      <div class="grid-image-container grid-fill">
                         <img src="{{ imgUrl }}" alt="{{ imgAlt }}">
                       </div>
                     {% endif %}
@@ -106,30 +102,25 @@
         {% for key, item in content['#block_content'].field_grid_layout_content %}
           {% set title = item.entity.field_grid_layout_content_title.value %}
           {% if title or item.entity.field_grid_layout_content_text|view %}
-            {% if (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "square-img") %}
-              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
+            {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
+              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
               {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-            {% elseif (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "wide-img") %}
-              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide') %}
-              {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-            {% endif %}
-            {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
-            {% set containerTag = gridLink ? 'a' : 'div' %}
-            <div class="col">
-              <div class="grid-column">
-                {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
-                  <{{ containerTag }}{{ create_attribute({ class: 'overlay-grid-image-container grid-fill ' ~ imgStyle, href: link }) }}>
-                    <strong>{{ title }}</strong>
-                    <img src="{{ imgUrl }}" alt="{{ imgAlt }}">
-                  </{{ containerTag }}>
-                {% endif %}
-                {% if item.entity.field_grid_layout_content_text|view %}
-                  <div class="overlay-grid-text">
-                    {{ item.entity.field_grid_layout_content_text|view }}
-                  </div>
-                {% endif %}
+              {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
+              {% set containerTag = link ? 'a' : 'div' %}
+              <div class="col">
+                <div class="grid-column">
+                    <{{ containerTag }}{{ create_attribute({ class: 'overlay-grid-image-container grid-fill', href: link }) }}>
+                      <strong>{{ title }}</strong>
+                      <img src="{{ imgUrl }}" alt="{{ imgAlt }}">
+                    </{{ containerTag }}>
+                  {% endif %}
+                  {% if item.entity.field_grid_layout_content_text|view %}
+                    <div class="overlay-grid-text">
+                      {{ item.entity.field_grid_layout_content_text|view }}
+                    </div>
+                </div>
               </div>
-            </div>
+            {% endif %}
           {% endif %}
         {% endfor %}
       </div>
@@ -138,20 +129,19 @@
       <div class="row row-cols-lg-2 row-cols-1">
         {% for key, item in content['#block_content'].field_grid_layout_content %}
           {% if key|first != '#' %}
-            {% if (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "square-img") %}
-              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
+            {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
+              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
               {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-            {% elseif (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "wide-img") %}
-              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide') %}
-              {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
+            {% else %}
+              {% set imgUrl = null %}
             {% endif %}
             {% set gridLink = item.entity.field_grid_layout_content_link.0.url %}
             {% if (loop.index0 % 3 == 0) and ((loop.index0 is even) or (loop.index0 == 0)) %}
               <div class="col">
                 <div class="grid-image-container-large">
-                  {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
-                    <div class="grid-image-container grid-fill {{ imgStyle }}">
-                      {% if item.entity.field_grid_layout_content_link.0.url %}
+                  {% if imgUrl %}
+                    <div class="grid-image-container grid-fill">
+                      {% if gridLink %}
                         <a href="{{ gridLink }}">
                           <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
                         </a>
@@ -162,7 +152,7 @@
                   {% endif %}
                   {% if (item.entity.field_grid_layout_content_title.value) or (item.entity.field_grid_layout_content_text|view) %}
                     <div class="grid-text-container">
-                      {% if item.entity.field_grid_layout_content_link.0.url %}
+                      {% if gridLink %}
                         <a href="{{ gridLink }}">
                           <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
                         </a>
@@ -177,9 +167,9 @@
             {% elseif (loop.index % 3 == 0) and (loop.index != 3) and (loop.index0 is odd) %}
               <div class="col">
                 <div class="grid-image-container-large">
-                  {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
-                    <div class="grid-image-container grid-fill {{ imgStyle }}">
-                      {% if item.entity.field_grid_layout_content_link.0.url %}
+                  {% if imgUrl %}
+                    <div class="grid-image-container grid-fill">
+                      {% if gridLink %}
                         <a href="{{ gridLink }}">
                           <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
                         </a>
@@ -190,7 +180,7 @@
                   {% endif %}
                   {% if (item.entity.field_grid_layout_content_title.value) or (item.entity.field_grid_layout_content_text|view) %}
                     <div class="grid-text-container">
-                      {% if item.entity.field_grid_layout_content_link.0.url %}
+                      {% if gridLink %}
                         <a href="{{ gridLink }}">
                           <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
                         </a>
@@ -205,9 +195,9 @@
             {% else %}
               <div class="col-lg-3 col-md-6 col">
                 <div class="grid-image-container-small">
-                  {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
-                    <div class="grid-image-container grid-fill {{ imgStyle }}">
-                      {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
+                  {% if imgUrl %}
+                    <div class="grid-image-container grid-fill">
+                      {% if gridLink %}
                         <a href="{{ gridLink }}">
                           <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
                         </a>
@@ -218,7 +208,7 @@
                   {% endif %}
                   {% if (item.entity.field_grid_layout_content_title.value) or (item.entity.field_grid_layout_content_text|view) %}
                     <div class="grid-text-container">
-                      {% if item.entity.field_grid_layout_content_link.0.url %}
+                      {% if gridLink %}
                         <a href="{{ gridLink }}">
                           <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
                         </a>
