--- a/templates/block/block--content-grid.html.twig
+++ b/templates/block/block--content-grid.html.twig
@@ -16,22 +16,25 @@
 ] %}
 
 {% set layoutSelection = content['#block_content'].field_grid_layout_selection.value %}
-{% set columnNumbers = '3' %}
-{% if content['#block_content'].field_grid_column_count.value is same as("0") %}
-  {% set columnNumbers = "2" %}
-{% elseif content['#block_content'].field_grid_column_count.value is same as("1") %}
-  {% set columnNumbers = "3" %}
-{% elseif content['#block_content'].field_grid_column_count.value is same as("2") %}
-  {% set columnNumbers = "4" %}
-{% elseif content['#block_content'].field_grid_column_count.value is same as("3") %}
-  {% set columnNumbers = "5" %}
+{% set columnCount = content['#block_content'].field_grid_column_count.value %}
+{% if columnCount == '0' %}
+  {% set columnCount = '2' %}
+{% elseif columnCount == '1' %}
+  {% set columnCount = '3' %}
+{% elseif columnCount == '2' %}
+  {% set columnCount = '4' %}
+{% elseif columnCount == '3' %}
+  {% set columnCount = '5' %}
+{% elseif columnCount == '4' %}
+  {% set columnCount = '6' %}
 {% else %}
-  {% set columnNumbers = "6" %}
+  {% set columnCount = '3' %}
 {% endif %}
 {% set imgStyle = 'focal_image_square' %}
-{% if content['#block_content'].field_grid_image_style.value is same as ("1") %}
+{% if content['#block_content'].field_grid_image_style.value == '1' %}
   {% set imgStyle = 'focal_image_wide' %}
 {% endif %}
+{% set contentParagraphs = content['#block_content'].field_grid_layout_content %}
 
 {# Block/Title/Icon Styles #}
 {% set blockStyles = [
@@ -40,13 +43,13 @@
   content.field_bs_icon_position|render|striptags|trim,
   content.field_bs_heading_alignment|render|striptags|trim,
   content.field_bs_title_font_scale|render|striptags|trim,
-  ''
 ] %}
 
 {% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
 {% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
 {% set headingTag = content.field_bs_heading|render|striptags|trim %}
 {% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
+
 
 {% block content %}
   <div{{ attributes.addClass(classes, blockStyles) }}>
@@ -64,10 +67,66 @@
       </div>
     {% endif %}
     {{ title_suffix }}
+    {# Overlay Grid Layout #}
+    {% if layoutSelection == '2' %}
+      <div class="row row-cols-lg-{{ columnCount }} row-cols-md-2 row-cols-1">
+        {% for key, item in contentParagraphs %}
+          {% set title = item.entity.field_grid_layout_content_title.value %}
+          {% if title or item.entity.field_grid_layout_content_text|view %}
+            {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
+              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
+              {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
+              {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
+              {% set containerTag = link ? 'a' : 'div' %}
+              <div class="col">
+                <div class="grid-column">
+                  <{{ containerTag }}{{ create_attribute({ class: 'overlay-grid-image-container grid-fill', href: link }) }}>
+                    <strong>{{ title }}</strong>
+                    <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
+                  </{{ containerTag }}>
+                  {% if item.entity.field_grid_layout_content_text|view %}
+                    <div class="overlay-grid-text">
+                      {{ item.entity.field_grid_layout_content_text|view }}
+                    </div>
+                  {% endif %}
+                </div>
+              </div>
+            {% endif %}
+          {% endif %}
+        {% endfor %}
+      </div>
+    {# Offset Grid Layout #}
+    {% elseif layoutSelection == '3' %}
+      <div class="row row-cols-lg-2 row-cols-1">
+        {% for key, item in contentParagraphs %}
+          <div{{ create_attribute({ class: loop.index % 6 > 1 ? 'col-lg-3 col-md-6 col' : 'col' }) }}>
+            {% set title = item.entity.field_grid_layout_content_title.value %}
+            {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
+              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
+              {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
+            {% else %}
+              {% set imgUrl = null %}
+            {% endif %}
+            {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
+            {% set containerTag = link ? 'a' : 'div' %}
+            <div class="grid-text-container">
+              <{{ containerTag }}{{ create_attribute({ class: 'd-flex flex-column-reverse justify-content-end', href: link }) }}>
+                <strong class="h3">{{ title }}</strong>
+                {% if imgUrl %}
+                  <div class="grid-image-container grid-fill">
+                    <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
+                  </div>
+                {% endif %}
+              </{{ containerTag }}>
+              {{ item.entity.field_grid_layout_content_text|view }}
+            </div>
+          </div>
+        {% endfor %}
+      </div>
     {# Column or Card Grid Layout #}
-    {% if layoutSelection == 0 or layoutSelection == 1 %}
-      <div class="row row-cols-lg-{{ columnNumbers }} row-cols-md-2 row-cols-1">
-        {% for key, item in content['#block_content'].field_grid_layout_content %}
+    {% else %}
+      <div class="row row-cols-lg-{{ columnCount }} row-cols-md-2 row-cols-1">
+        {% for key, item in contentParagraphs %}
           {% set title = item.entity.field_grid_layout_content_title.value %}
           {% if title or item.entity.field_grid_layout_content_text|view %}
             <div class="col">
@@ -85,7 +144,7 @@
                     <strong class="h3">{{ title }}</strong>
                     {% if imgUrl %}
                       <div class="grid-image-container grid-fill">
-                        <img src="{{ imgUrl }}" alt="{{ imgAlt }}">
+                        <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
                       </div>
                     {% endif %}
                   </{{ containerTag }}>
@@ -93,134 +152,6 @@
                 </div>
               </div>
             </div>
-          {% endif %}
-        {% endfor %}
-      </div>
-    {# Overlay Grid Layout #}
-    {% elseif layoutSelection == 2 %}
-      <div class="row row-cols-lg-{{ columnNumbers }} row-cols-md-2 row-cols-1">
-        {% for key, item in content['#block_content'].field_grid_layout_content %}
-          {% set title = item.entity.field_grid_layout_content_title.value %}
-          {% if title or item.entity.field_grid_layout_content_text|view %}
-            {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
-              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
-              {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-              {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
-              {% set containerTag = link ? 'a' : 'div' %}
-              <div class="col">
-                <div class="grid-column">
-                    <{{ containerTag }}{{ create_attribute({ class: 'overlay-grid-image-container grid-fill', href: link }) }}>
-                      <strong>{{ title }}</strong>
-                      <img src="{{ imgUrl }}" alt="{{ imgAlt }}">
-                    </{{ containerTag }}>
-                  {% endif %}
-                  {% if item.entity.field_grid_layout_content_text|view %}
-                    <div class="overlay-grid-text">
-                      {{ item.entity.field_grid_layout_content_text|view }}
-                    </div>
-                </div>
-              </div>
-            {% endif %}
-          {% endif %}
-        {% endfor %}
-      </div>
-    {# Offset Grid Layout #}
-    {% else %}
-      <div class="row row-cols-lg-2 row-cols-1">
-        {% for key, item in content['#block_content'].field_grid_layout_content %}
-          {% if key|first != '#' %}
-            {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
-              {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
-              {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-            {% else %}
-              {% set imgUrl = null %}
-            {% endif %}
-            {% set gridLink = item.entity.field_grid_layout_content_link.0.url %}
-            {% if (loop.index0 % 3 == 0) and ((loop.index0 is even) or (loop.index0 == 0)) %}
-              <div class="col">
-                <div class="grid-image-container-large">
-                  {% if imgUrl %}
-                    <div class="grid-image-container grid-fill">
-                      {% if gridLink %}
-                        <a href="{{ gridLink }}">
-                          <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
-                        </a>
-                      {% else %}
-                        <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
-                      {% endif %}
-                    </div>
-                  {% endif %}
-                  {% if (item.entity.field_grid_layout_content_title.value) or (item.entity.field_grid_layout_content_text|view) %}
-                    <div class="grid-text-container">
-                      {% if gridLink %}
-                        <a href="{{ gridLink }}">
-                          <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
-                        </a>
-                      {% else %}
-                        <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
-                      {% endif %}
-                      {{ item.entity.field_grid_layout_content_text|view }}
-                    </div>
-                  {% endif %}
-                </div>
-              </div>
-            {% elseif (loop.index % 3 == 0) and (loop.index != 3) and (loop.index0 is odd) %}
-              <div class="col">
-                <div class="grid-image-container-large">
-                  {% if imgUrl %}
-                    <div class="grid-image-container grid-fill">
-                      {% if gridLink %}
-                        <a href="{{ gridLink }}">
-                          <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
-                        </a>
-                      {% else %}
-                        <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
-                      {% endif %}
-                    </div>
-                  {% endif %}
-                  {% if (item.entity.field_grid_layout_content_title.value) or (item.entity.field_grid_layout_content_text|view) %}
-                    <div class="grid-text-container">
-                      {% if gridLink %}
-                        <a href="{{ gridLink }}">
-                          <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
-                        </a>
-                      {% else %}
-                        <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
-                      {% endif %}
-                      {{ item.entity.field_grid_layout_content_text|view }}
-                    </div>
-                  {% endif %}
-                </div>
-              </div>
-            {% else %}
-              <div class="col-lg-3 col-md-6 col">
-                <div class="grid-image-container-small">
-                  {% if imgUrl %}
-                    <div class="grid-image-container grid-fill">
-                      {% if gridLink %}
-                        <a href="{{ gridLink }}">
-                          <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
-                        </a>
-                      {% else %}
-                        <img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
-                      {% endif %}
-                    </div>
-                  {% endif %}
-                  {% if (item.entity.field_grid_layout_content_title.value) or (item.entity.field_grid_layout_content_text|view) %}
-                    <div class="grid-text-container">
-                      {% if gridLink %}
-                        <a href="{{ gridLink }}">
-                          <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
-                        </a>
-                      {% else %}
-                        <strong class="h3">{{ item.entity.field_grid_layout_content_title.value }}</strong>
-                      {% endif %}
-                      {{ item.entity.field_grid_layout_content_text|view }}
-                    </div>
-                  {% endif %}
-                </div>
-              </div>
-            {% endif %}
           {% endif %}
         {% endfor %}
       </div>
