--- a/css/ucb-article-list.css
+++ b/css/ucb-article-list.css
@@ -38,6 +38,10 @@
   margin-bottom: 10px;
 }
 
+.ucb-article-list-body{
+  margin-bottom: 20px;
+}
+
 .ucb-article-card-body {
   margin-bottom: 0;
 }
