--- a/templates/block/block--content-grid.html.twig
+++ b/templates/block/block--content-grid.html.twig
@@ -82,7 +82,7 @@
               <div class="grid-column">
                 <{{ containerTag }}{{ create_attribute({ class: 'overlay-grid-image-container grid-fill', href: link }) }}>
                   {% if title %}
-                    <strong class="h3">{{ title }}</strong>
+                    <strong>{{ title }}</strong>
                   {% endif %}
                   <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
                 </{{ containerTag }}>
