--- a/templates/block/block--slider.html.twig
+++ b/templates/block/block--slider.html.twig
@@ -78,7 +78,7 @@
 			<div
 				class="carousel-inner">
 				{# Don't render these fields #}
-				{{ content|without('field_slider_size','field_slider_text_style') }}
+				{{ content|without('field_slider_size','field_slider_text_style', 'field_bs_heading', 'field_bs_heading_style','field_bs_heading_alignment', 'field_bs_icon_size', 'field_bs_icon_position', 'field_bs_icon_color', 'field_bs_title_font_scale', 'field_slider_text_style','field_bs_content_font_scale', 'field_bs_background_style' ) }}
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#{{ id }}" data-bs-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
