CuBoulder/tiamat-theme#911 Changes `<h5>` to `<h2>` in site footer

--- a/templates/block/block--site-info.html.twig
+++ b/templates/block/block--site-info.html.twig
@@ -32,7 +32,7 @@
   set classes = []
 %}
 <div{{ attributes.addClass(classes) }}>
-  <h5><a href="/"> {{ site_name }} </a></h5>
+  <h2 class="h5"><a href="/">{{ site_name }}</a></h2>
   {% block content %}
     <div class="ucb-site-contact-info-footer">
       {% if data.general_visible == '1' %}
