--- a/templates/block/block--slider.html.twig
+++ b/templates/block/block--slider.html.twig
@@ -69,7 +69,7 @@
 		{% endif %}
 		{{ title_suffix }}
 		{# <h1> {{ dump(content['#block_content'].field_slider_slide.value) }} </h1> #}
-		<div id="{{ id }}" class="carousel slide" data-bs-ride="carousel">
+		<div id="{{ id }}" class="carousel slide" data-interval="false">
 			<div class="carousel-indicators">
 				{% for i in 1..content['#block_content'].field_slider_slide.value|length %}
 					<button type="button" {% if loop.first %} class="active" {% endif %} data-bs-target="#{{ id }}" data-bs-slide-to="{{ i - 1 }}" aria-label="Slide {{ i }}"></button>
